[package]
name = "onellm"
version = "1.0.0-beta"
edition = "2024"
description = "Official rust crate to communicate with the OneLLM API in rust"
license = "MIT"
repository = "https://github.com/OneLLM-dev/onellm-crate.git"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
